tests/fixtures/invalid/extern_conflicting_signature.gcl
// error: the same plugin function is declared twice with different signatures
import plugin "graphcal:demo" as a {
    fn lerp<D>(a: D, b: D, t: Dimensionless) -> D;
}
import plugin "graphcal:demo" as b {
    fn lerp(a: Dimensionless, b: Dimensionless, t: Dimensionless) -> Dimensionless;
}
node x: Dimensionless = a.lerp(1.0, 2.0, 0.5);
